<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vt323"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/icons8_refresh_480" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Dayweather"
        android:layout_width="303dp"
        android:layout_height="215dp"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_zone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prim_zone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/houertemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prim_zone"
        android:layout_width="413dp"
        android:layout_height="218dp"
        android:background="@color/black08"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076">

        <TextView
            android:id="@+id/daytemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/fils"
            app:layout_constraintTop_toBottomOf="@+id/fils" />

        <TextView
            android:id="@+id/fils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:text="@string/fils"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <TextView
            android:id="@+id/Temperature"
            android:layout_width="411dp"
            android:layout_height="75dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/vt323"
            android:text="@string/temp"
            android:textAlignment="textStart"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/City" />

        <TextView
            android:id="@+id/City"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:text="@string/city"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:text="@string/cloc"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Temperature"
            app:layout_constraintTop_toBottomOf="@+id/Temperature" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/nointernet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="39dp">

        <TextView
            android:id="@+id/nointernetconnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="356dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="356dp"
            android:text="@string/nointernet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>